--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
+    "next-contentlayer": "^0.3.4",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
