--- a/package.json
+++ b/package.json
@@ -1,12 +1,30 @@
 {
+  "name": "daedalus-odyssey",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
     "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
-    "next-contentlayer": "^0.3.4",
-    "rehype-autolink-headings": "^7.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "postcss": "8.4.29",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.4"
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   }
 }
