--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -22,6 +23,7 @@
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.29",
+    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^6.1.1",
