--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.29",
@@ -33,6 +35,7 @@
     "shiki": "^0.14.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
   }
