--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.5",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -21,6 +23,7 @@
     "contentlayer": "^0.3.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "next-contentlayer": "^0.3.4",
