i hope this works

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='mysql://9myuarxc79l7uh7p3pg7:pscale_pw_85hACBKPQxej5BbYtOUe60l5TWFoCgHOZIdGAbyG955@gcp.connect.psdb.cloud/daedalus?sslaccept=strict'
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2hhcnAtcGVhY29jay01MS5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_Dk4olhzT7WN7tFTrDycA83ST8AqEBK1PZasj14XfrC
