--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
-    "next": "13.4.19",
+    "next": "^13.5.2",
     "next-contentlayer": "^0.3.4",
     "postcss": "^8.4.29",
     "prisma": "^5.3.1",
