--- a/components.json
+++ b/components.json
@@ -7,7 +7,8 @@
     "config": "tailwind.config.js",
     "css": "app/globals.css",
     "baseColor": "slate",
-    "cssVariables": true
+    "cssVariables": true,
+    "purge": true
   },
   "aliases": {
     "components": "@/components",
