--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.4.29",
     "prisma": "^5.3.1",
     "react": "18.2.0",
+    "react-chrono": "^2.2.7",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.1",
