--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
     "build": "prisma generate && contentlayer build && next build",
     "start": "next start",
     "lint": "next lint"
+  },"npm": {
+    "overrides": {
+      "@opentelemetry/api": "1.4.1",
+      "@opentelemetry/core": "1.13.0",
+      "@opentelemetry/exporter-trace-otlp-grpc": "0.39.1",
+      "@opentelemetry/resources": "1.13.0",
+      "@opentelemetry/sdk-trace-base": "1.13.0",
+      "@opentelemetry/sdk-trace-node": "1.13.0",
+      "@opentelemetry/semantic-conventions": "1.13.0"
+    }
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
+    "@planetscale/database": "^1.11.0",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.1",
@@ -17,26 +28,38 @@
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.0.2",
+    "@vercel/edge-config": "^0.4.1",
     "autoprefixer": "^10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
+    "googleapis": "^126.0.1",
+    "kysely": "^0.26.3",
+    "kysely-planetscale": "^1.4.0",
     "lucide-react": "^0.279.0",
     "next": "^13.5.2",
+    "next-auth": "0.0.0-manual.83c4ebd1",
     "next-contentlayer": "^0.3.4",
     "postcss": "^8.4.29",
     "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-chrono": "^2.2.7",
     "react-dom": "18.2.0",
+    "react-tweet": "^3.1.1",
+    "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
+    "server-only": "^0.0.1",
     "shiki": "^0.14.4",
+    "swr": "^2.2.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
