--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
@@ -35,7 +34,6 @@
     "next": "^13.5.2",
     "next-contentlayer": "^0.3.4",
     "postcss": "^8.4.29",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-chrono": "^2.2.7",
     "react-dom": "18.2.0",
@@ -51,7 +49,12 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.6.3",
+    "prisma": "^5.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
