--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-DATABASE_URL="mysql://5hnrexzs7aynso150auu:arliesam7411@gcp.connect.psdb.cloud/daedalus?sslaccept=strict"
+DATABASE_URL=mysql://5hnrexzs7aynso150auu:arliesam7411@gcp.connect.psdb.cloud/daedalus?sslaccept=strict
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2hhcnAtcGVhY29jay01MS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_Dk4olhzT7WN7tFTrDycA83ST8AqEBK1PZasj14XfrC
 
