--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 
-DATABASE_URL='mysql://1pk5htt61m6p70wjmj78:pscale_pw_sjfwaBQTkPD0eJoJDnyPchfh8AbKBBXN3VqBWWPBqeO@gcp-us-central1.connect.psdb.cloud/daedalus?sslaccept=strict'
+DATABASE_URL='mysql://qr0lor8b9ujsti3xnpwm:pscale_pw_fBTjamR1ZortV4hjey7pozVgZAkvXofKZ1ybmzQ2JmO@gcp-us-central1.connect.psdb.cloud/daedalus?sslaccept=strict'
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2hhcnAtcGVhY29jay01MS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_Dk4olhzT7WN7tFTrDycA83ST8AqEBK1PZasj14XfrC
 
