--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-chrono": "^2.2.7",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.4.0",
     "react-tweet": "^3.1.1",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^6.1.1",
