--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.23.5",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^3.1.12",
     "@t3-oss/env-nextjs": "^0.6.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/react": "18.2.21",
@@ -39,7 +40,7 @@
     "react": "18.2.0",
     "react-chrono": "^2.2.7",
     "react-dom": "18.2.0",
-    "react-pdf": "^7.4.0",
+    "react-pdf": "^7.5.0",
     "react-tweet": "^3.1.1",
     "react-wrap-balancer": "^1.1.0",
     "rehype-autolink-headings": "^6.1.1",
