--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.5",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.1.12",
     "@t3-oss/env-nextjs": "^0.6.1",
